[package]
name = "os-error-code"
version = "0.1.0"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
description = "Functions for obtaining and updating the platform-specfic last error code."
repository = "https://github.com/FaultyRAM/os-error-code"
readme = "README.md"
categories = ["api-bindings", "no-std", "os"]
license = "Apache-2.0 OR MIT"

[badges.appveyor]
repository = "FaultyRAM/os-error-code"

[badges.travis-ci]
repository = "FaultyRAM/os-error-code"

[badges.is-it-maintained-issue-resolution]
repository = "FaultyRAM/os-error-code"

[badges.is-it-maintained-open-issues]
repository = "FaultyRAM/os-error-code"

[badges.maintenance]
status = "actively-developed"

[dependencies.clippy]
version = "0.0"
optional = true
