[package]
name = "dragonfly-errno"
version = "0.1.0"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
workspace = ".."
publish = false
description = "Rust bindings to errno on DragonFlyBSD."
repository = "https://github.com/FaultyRAM/os-error-code"
readme = "README.md"
categories = ["api-bindings", "no-std", "os::unix-apis"]
license = "Apache-2.0 OR MIT"

[badges.appveyor]
repository = "FaultyRAM/os-error-code"

[badges.travis-ci]
repository = "FaultyRAM/os-error-code"

[badges.is-it-maintained-issue-resolution]
repository = "FaultyRAM/os-error-code"

[badges.is-it-maintained-open-issues]
repository = "FaultyRAM/os-error-code"

[badges.maintenance]
status = "actively-developed"

[dependencies.clippy]
version = "0.0"
optional = true

[target.'cfg(target_os = "dragonfly")'.build-dependencies]
cc = "1"
